<resources>
    <string name="app_name">Project5236</string>
    <string name="action_settings">Settings</string>


    <!-- Strings used on the home page (fragment 1) -->

    <string name="home_label">SCARED OF THE LIGHT</string>
    <string name="play">PLAY</string>
    <string name="level_select">LEVEL SELECT</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="settings">SETTINGS</string>

    <string name="back">BACK</string>
    <string name="create">CREATE</string>
    <string name="read">READ</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

    <string name="restart">RESTART</string>
    <string name="next">NEXT</string>
    <string name="congrats">Congratulation! You\'ve completed this level!</string>
    <string name="level">Level</string>
    <string name="completed">Completed</string>
    <string name="star">Stars Collected</string>
    <string name="score">Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="general_header">General</string>
    <string name="language_title">Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="reset">Reset</string>


</resources>