<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_header">

            <ListPreference
            app:key="language"
            app:dialogTitle="@string/language_title"
            app:entries="@array/language_keys"
            app:entryValues="@array/language_values"
            app:title="@string/language_title"
            app:defaultValue="@string/english"
            app:summary="%s" />


    </PreferenceCategory>

</PreferenceScreen>